--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             text-decoration: none;
             color: #fff;
             font-weight: bold;
-            font-size: 0.9em;
+            font-size: 1em;
             padding: 8px 12px;
             border-radius: 5px;
             white-space: nowrap;
@@ -85,39 +85,36 @@
             display: flex;
             flex-wrap: wrap;
             justify-content: center;
+            align-items: center;
             gap: 40px;
             width: 100%;
         }
 
         .about-us {
             background: #ffffff;
-            padding: 60px;
+            padding: 40px;
             border-radius: 15px;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
             text-align: justify;
             flex: 1;
-            min-width: 400px;
+            min-width: 300px;
+            font-size: 1.2em;
+            line-height: 1.6;
         }
 
         .about-us h2 {
             color: #6a7a96;
             font-size: 2.5em;
-            margin-bottom: 30px;
+            margin-bottom: 20px;
             text-align: center;
         }
 
-        .about-us p {
-            color: #666;
-            font-size: 1.2em;
-            line-height: 1.6;
-        }
-
         .marketing-image {
-            width: 40%;
+            width: 300px;
+            height: 300px;
             border-radius: 15px;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
             object-fit: cover;
-            max-height: 500px;
         }
 
         /* Sección Servicios */
@@ -134,28 +131,24 @@
 
         .services-wrapper {
             display: flex;
-            overflow-y: auto;
-            height: 600px;
             flex-direction: column;
             align-items: center;
-            gap: 20px;
-            padding: 20px;
-            border-radius: 15px;
-            background-color: #f9f9f9;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-            box-sizing: border-box;
+            gap: 40px;
+            width: 100%;
         }
 
         .service-item {
             background: #ffffff;
-            padding: 20px;
+            padding: 30px;
             border-radius: 15px;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
             text-align: left;
             box-sizing: border-box;
-            width: 80%;
-            min-height: 350px;
+            width: 100%;
+            max-width: 800px;
             transition: transform 0.3s ease;
+            font-size: 1.1em;
+            line-height: 1.6;
         }
 
         .service-item:hover {
@@ -164,29 +157,22 @@
 
         .service-item img {
             width: 100%;
-            max-height: 180px;
+            height: 200px;
             border-radius: 10px;
-            margin-bottom: 15px;
+            margin-bottom: 20px;
             object-fit: cover;
         }
 
         .service-item h3 {
             color: #6a7a96;
-            font-size: 1.5em;
-            margin-bottom: 10px;
+            font-size: 1.8em;
+            margin-bottom: 15px;
         }
 
         .service-item p {
             color: #666;
-            font-size: 1em;
-            line-height: 1.4;
+            font-size: 1.1em;
             text-align: justify;
-            flex-grow: 1;
-            display: flex;
-            flex-direction: column;
-            justify-content: flex-start;
-            padding: 0 10px;
-            overflow: hidden;
         }
 
         footer {
@@ -197,6 +183,17 @@
         }
 
         /* Media Queries */
+        @media (max-width: 1024px) {
+            .marketing-image {
+                width: 250px;
+                height: 250px;
+            }
+
+            .service-item h3 {
+                font-size: 1.6em;
+            }
+        }
+
         @media (max-width: 768px) {
             header {
                 flex-direction: column;
@@ -209,6 +206,7 @@
                 align-items: stretch;
                 gap: 5px;
                 margin: 10px 0;
+                width: 100%;
             }
 
             nav a {
@@ -225,21 +223,44 @@
 
             .marketing-image {
                 width: 90%;
+                height: auto;
                 max-height: 300px;
             }
 
             .about-us {
-                padding: 30px;
+                padding: 20px;
+                font-size: 1.1em;
             }
 
             .services-wrapper {
-                height: auto;
-                overflow-y: visible;
-                flex-direction: column;
+                gap: 20px;
             }
 
             .service-item {
-                width: 90%;
+                width: 100%;
+                padding: 20px;
+            }
+
+            .service-item h3 {
+                font-size: 1.5em;
+            }
+
+            .service-item p {
+                font-size: 1em;
+            }
+        }
+
+        @media (max-width: 480px) {
+            .about-us h2 {
+                font-size: 2em;
+            }
+
+            .service-item h3 {
+                font-size: 1.3em;
+            }
+
+            .service-item p {
+                font-size: 0.95em;
             }
         }
     </style>
@@ -286,7 +307,8 @@
                     <h3>Automatización</h3>
                     <p>Automatización de procesos repetitivos y envío de reportes programados para maximizar la eficiencia de los equipos y reducir costos. Configuración de triggers, integraciones y scripts a medida.</p>
                 </div>
-                </div>
+                <!-- Puedes agregar más servicios aquí -->
+            </div>
         </section>
     </div>
     <footer>
